update package.json Readme & lock version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "esnext",
+  "name": "webpack-config-template",
   "version": "1.0.0",
-  "description": "this is esnext ",
-  "main": "app/js/index.js",
+  "description": "this is webpack5 config template",
+  "main": "src/app/index.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
@@ -11,35 +11,33 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/yanyunchangfeng/esnext.git"
+    "url": "https://github.com/yanyunchangfeng/webpack-config-template.git"
   },
   "author": "yanyunchangfeng <yanyunchangfeng@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/webpack-env": "^1.16.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "sass": "^1.49.11",
-    "sass-loader": "^12.6.0",
-    "speed-measure-webpack-plugin": "^1.5.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "thread-loader": "^3.0.4",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
-    "webpack": "^5.71.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.0",
-    "webpack-merge": "^5.8.0"
+    "@types/webpack-env": "1.16.3",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "10.2.4",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.1",
+    "friendly-errors-webpack-plugin": "1.7.0",
+    "html-loader": "3.1.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.6.0",
+    "sass": "1.49.11",
+    "sass-loader": "12.6.0",
+    "speed-measure-webpack-plugin": "1.5.0",
+    "style-loader": "3.3.1",
+    "terser-webpack-plugin": "5.3.1",
+    "thread-loader": "3.0.4",
+    "ts-loader": "9.2.8",
+    "typescript": "4.6.3",
+    "webpack": "5.71.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.0",
+    "webpack-merge": "5.8.0"
   },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13"
-  }
+  "dependencies": {}
 }
