--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/app/index.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
+    "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
@@ -17,14 +18,18 @@
   "license": "MIT",
   "devDependencies": {
     "@types/webpack-env": "1.16.3",
-    "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
     "friendly-errors-webpack-plugin": "1.7.0",
+    "css-minimizer-webpack-plugin": "4.1.0",
+    "fork-ts-checker-webpack-plugin": "7.2.13",
     "html-loader": "3.1.0",
+    "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
+    "image-webpack-loader": "8.1.0",
     "mini-css-extract-plugin": "2.6.0",
+    "unused-webpack-plugin":"2.4.0",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
     "speed-measure-webpack-plugin": "1.5.0",
