--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
   },
+  "sideEffects": [
+    "*.css",
+    "*.less",
+    "*.scss"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/yanyunchangfeng/webpack-config-template.git"
@@ -21,15 +26,13 @@
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
-    "friendly-errors-webpack-plugin": "1.7.0",
     "css-minimizer-webpack-plugin": "4.1.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
-    "html-loader": "3.1.0",
+    "friendly-errors-webpack-plugin": "1.7.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
     "image-webpack-loader": "8.1.0",
     "mini-css-extract-plugin": "2.6.0",
-    "unused-webpack-plugin":"2.4.0",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
     "speed-measure-webpack-plugin": "1.5.0",
@@ -38,11 +41,13 @@
     "thread-loader": "3.0.4",
     "ts-loader": "9.2.8",
     "typescript": "4.6.3",
+    "unused-webpack-plugin": "2.4.0",
     "webpack": "5.71.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.0",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "webpackbar": "5.0.2"
   },
   "dependencies": {}
 }
