--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,8 @@
         "module": "esnext",
         "strict": false,
         "lib": [
-            "es5",
-            "es2015",
-            "es2016",
-            "es2017",
-            "es2018",
-            "dom",
-            "esnext"
+            "esnext",
+            "dom"
         ],
         "target": "es2020",
         "sourceMap": true,
