perf:optimization config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         },
         // "preserveConstEnums": true, // 编译结果保留const定义的常量枚举 默认关闭
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "incremental": true
     },
     "include": [
