--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
+    "start-unused": "cross-env NODE_ENV=development UNUSED=1  webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
@@ -29,6 +30,7 @@
     "css-minimizer-webpack-plugin": "4.1.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "friendly-errors-webpack-plugin": "1.7.0",
+    "html-loader": "4.1.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
     "image-webpack-loader": "8.1.0",
@@ -44,7 +46,7 @@
     "unused-webpack-plugin": "2.4.0",
     "webpack": "5.71.0",
     "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.8.0",
     "webpack-merge": "5.8.0",
     "webpackbar": "5.0.2"
