--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-config-template",
   "version": "1.0.0",
   "description": "this is webpack5 config template",
-  "main": "src/app/index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
