--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "this is webpack5 config template",
   "main": "src/index.ts",
   "scripts": {
+    "test": "jest",
     "start": "cross-env NODE_ENV=development webpack serve",
     "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
     "start-unused": "cross-env NODE_ENV=development UNUSED=1  webpack serve",
@@ -16,11 +17,6 @@
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./docs/stats.json"
   },
-  "sideEffects": [
-    "*.css",
-    "*.less",
-    "*.scss"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/yanyunchangfeng/webpack-config-template.git"
@@ -28,6 +24,8 @@
   "author": "yanyunchangfeng <yanyunchangfeng@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
     "@types/webpack-env": "1.16.3",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
@@ -39,14 +37,18 @@
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
     "image-webpack-loader": "8.1.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "2.6.0",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
     "speed-measure-webpack-plugin": "1.5.0",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.1",
-    "thread-loader": "3.0.4",
+    "ts-jest": "29.0.3",
     "ts-loader": "9.2.8",
+    "ts-node": "10.9.1",
     "typescript": "4.6.3",
     "unused-webpack-plugin": "2.4.0",
     "webpack": "5.71.0",
