feat:optimization process

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "webpack-config-template",
   "version": "1.0.0",
   "description": "this is webpack5 config template",
-  "main": "src/index.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "jest",
     "start": "cross-env NODE_ENV=development webpack serve",
@@ -15,7 +16,14 @@
     "build-multi-page": "cross-env NODE_ENV=production MULTIPLE=1  webpack",
     "build-multi-page-analyzer": "cross-env NODE_ENV=production MULTIPLE=1 ANALYZE=1  webpack",
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
-    "analyzer": "webpack-bundle-analyzer --port 8888 ./docs/stats.json"
+    "analyzer": "webpack-bundle-analyzer --port 8888 ./docs/stats.json",
+    "clean": "rimraf ./dist",
+    "build-css": "sass ./src/index.scss ./dist/index.css",
+    "prepublishOnly": "npm run build-umd-esm-cjs",
+    "build:umd": "cross-env NODE_ENV=production UMD_LIBRARY=MyLibrary webpack build",
+    "build:esm": "tsc -p tsconfig.build.json -m es6 --outDir dist/esm",
+    "build:cjs": "tsc -p tsconfig.build.json -m commonjs --outDir dist/cjs",
+    "build-umd-esm-cjs": "npm run test && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs"
   },
   "repository": {
     "type": "git",
@@ -36,10 +44,7 @@
     "html-loader": "4.1.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
-    "image-webpack-loader": "8.1.0",
     "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "2.6.0",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
