--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
     "module": "esnext",
     "strict": true,
     "lib": ["esnext", "dom"],
-    "target": "es2020",
+    "target": "es5",
     "sourceMap": true,
     "jsx": "react",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "src/*": [
         "src/*" // alias让webpack识别 paths让ts识别
@@ -24,7 +24,6 @@
   },
   "include": [
     "src/**/*", // 两个*表示任意目录 一个*表示任意文件
-    "src/typings/**/*",
     "test/**/*"
   ]
 }
