--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build:cjs": "tsc -p tsconfig.build.json -m commonjs --outDir dist/cjs",
     "build-umd-esm-cjs": "npm run test && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cypress:run-report": "cypress run --reporter mochawesome"
   },
   "repository": {
     "type": "git",
@@ -49,6 +50,8 @@
     "html-webpack-plugin": "5.5.0",
     "jest": "29.3.1",
     "mini-css-extract-plugin": "2.6.0",
+    "mocha": "10.2.0",
+    "mochawesome": "7.1.3",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
     "speed-measure-webpack-plugin": "1.5.0",
