feat:add husky pre-commit

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "build:umd": "cross-env NODE_ENV=production UMD_LIBRARY=MyLibrary webpack build",
     "build:esm": "tsc -p tsconfig.build.json -m es6 --outDir dist/esm",
     "build:cjs": "tsc -p tsconfig.build.json -m commonjs --outDir dist/cjs",
-    "build-umd-esm-cjs": "npm run test && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
+    "build-umd-esm-cjs": "npm run test && npm run cypress:run && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:run-report": "cypress run --reporter mochawesome"
+    "cypress:run-report": "cypress run --reporter mochawesome",
+    "prepare": "husky install",
+    "pre-commit": "npm test && npm run cypress:run"
   },
   "repository": {
     "type": "git",
@@ -48,6 +50,7 @@
     "html-loader": "4.1.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.3",
     "jest": "29.3.1",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "10.2.0",
