--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
+      - name: Test project
+        run: npm start && npm test && npm run cypress:run
+
       - name: Build project
         run: npm test && npm run build
 
