feat:add concurrently wait-on for deploy test workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Test project
-        run: npm start && npm test && npm run cypress:run
+        run: npm test && npm run cypress:run
 
       - name: Build project
-        run: npm test && npm run build
+        run: npm run build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
