--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "build:cjs": "tsc -p tsconfig.build.json -m commonjs --outDir dist/cjs",
     "build-umd-esm-cjs": "npm run test && npm run cypress:run && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
+    "cypress:run": "concurrently  --kill-others --kill-others-on-fail  \" npm start\" \" wait-on http://localhost:8080 && cypress run\" ",
     "cypress:run-report": "cypress run --reporter mochawesome",
     "prepare": "husky install",
-    "pre-commit": "npm test && npm run cypress:run"
+    "pre-commit": "cross-env CI=true npm test && npm run cypress:run"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
     "@types/webpack-env": "1.16.3",
+    "concurrently": "8.2.0",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
@@ -60,11 +61,12 @@
     "speed-measure-webpack-plugin": "1.5.0",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.1",
-    "ts-jest": "29.0.3",
+    "ts-jest": "29.1.0",
     "ts-loader": "9.2.8",
     "ts-node": "10.9.1",
     "typescript": "5.1.3",
     "unused-webpack-plugin": "2.4.0",
+    "wait-on": "7.0.1",
     "webpack": "5.71.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.10.0",
