--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Test project
-        run: npm test && npm run cypress:run
+        run: npm run pre-commit
 
       - name: Build project
         run: npm run build
