--- a/package.json
+++ b/package.json
@@ -24,14 +24,10 @@
     "start": "cross-env NODE_ENV=development webpack serve",
     "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
     "start-unused": "cross-env NODE_ENV=development UNUSED=1  webpack serve",
-    "start-multi-page": "cross-env NODE_ENV=development MULTIPLE=1  webpack serve",
-    "start-multi-page-unused": "cross-env NODE_ENV=development MULTIPLE=1 UNUSED=1  webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "build-analyzer": "cross-env NODE_ENV=production ANALYZE=1  webpack",
-    "build-multi-page": "cross-env NODE_ENV=production MULTIPLE=1  webpack",
-    "build-multi-page-analyzer": "cross-env NODE_ENV=production MULTIPLE=1 ANALYZE=1  webpack",
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
-    "analyzer": "webpack-bundle-analyzer --port 8888 ./docs/stats.json",
+    "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json",
     "clean": "rimraf ./dist",
     "build-css": "sass ./src/index.scss ./dist/index.css",
     "prepublishOnly": "npm run pre-commit && npm run build-umd-esm-cjs",
@@ -41,7 +37,6 @@
     "build-umd-esm-cjs": "npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
     "cypress:open": "cypress open",
     "cypress:run": "concurrently  --kill-others  --success=first \" npm start\" \" wait-on http://localhost:8080 && cypress run\" ",
-    "cypress:run-report": "cypress run --reporter mochawesome",
     "prepare": "husky install",
     "pre-commit": "cross-env CI=true npm test && npm run cypress:run"
   },
@@ -53,7 +48,7 @@
     "url": "https://github.com/yanyunchangfeng/webpack-config-template.git"
   },
   "keywords": [],
-  "author": "yanyunchangfeng <yanyunchangfeng@gmail.com>",
+  "author": "yanyunchangfeng <yanyunchangfeng@gmail.com> (https://github.com/yanyunchangfeng)",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "29.2.5",
@@ -73,8 +68,6 @@
     "husky": "8.0.3",
     "jest": "29.3.1",
     "mini-css-extract-plugin": "2.6.0",
-    "mocha": "10.2.0",
-    "mochawesome": "7.1.3",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
     "speed-measure-webpack-plugin": "1.5.0",
