feat: optimization package.json & webpack config

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -10,6 +10,5 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
-  "exclude": ["src/types/*"]
+  "include": ["src"]
 }
