--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "start": "cross-env NODE_ENV=development webpack serve",
     "start-analyzer": "cross-env NODE_ENV=development ANALYZE=1  webpack serve",
     "start-unused": "cross-env NODE_ENV=development UNUSED=1  webpack serve",
+    "start-smp": "cross-env NODE_ENV=development SMP=1  webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "build-analyzer": "cross-env NODE_ENV=production ANALYZE=1  webpack",
+    "build-smp": "cross-env NODE_ENV=production SMP=1  webpack",
     "generateAnalyzerFile": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json",
     "clean": "rimraf ./dist",
@@ -67,7 +69,7 @@
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.3",
     "jest": "29.3.1",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "13.2.3",
     "mini-css-extract-plugin": "2.6.0",
     "prettier": "2.8.8",
     "sass": "1.49.11",
