--- a/.github/workflows/codeAnalysis.yml
+++ b/.github/workflows/codeAnalysis.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-node@v3
 
     - name: Install dependencies
-      run: npm install
+      uses: bahmutov/npm-install@v1
 
     - name: Run ESLint
       run: npx eslint . --format html --output-file eslint-report.html
