--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "cypress:run": "concurrently  --kill-others  --success=first \" npm start \" \" wait-on http://localhost:8080 && cypress run \" ",
     "prettier": "prettier -c --write  **/* --cache",
     "prepare": "husky install",
-    "pre-commit": "lint-staged && cross-env CI=true npm test && npm run cypress:run"
+    "pre-commit": "lint-staged && cross-env CI=true npm test && npm run cypress:run",
+    "eslint:report": "eslint  -f html -o eslint-report/index.html || true"
   },
   "files": [
     "dist"
@@ -59,6 +60,7 @@
   "author": "yanyunchangfeng <yanyunchangfeng@gmail.com> (https://github.com/yanyunchangfeng)",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
     "@types/webpack-env": "1.16.3",
@@ -68,7 +70,10 @@
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.1.0",
     "cypress": "12.14.0",
+    "eslint": "9.x",
+    "eslint-plugin-react": "^7.35.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
+    "globals": "^15.8.0",
     "html-loader": "4.1.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
@@ -86,6 +91,7 @@
     "ts-loader": "9.2.8",
     "ts-node": "10.9.1",
     "typescript": "5.1.3",
+    "typescript-eslint": "^7.17.0",
     "unused-webpack-plugin": "2.4.0",
     "wait-on": "7.0.1",
     "webpack": "5.71.0",
