--- a/.yarnrc
+++ b/.yarnrc
@@ -3,8 +3,5 @@
 
 registry "https://registry.npm.taobao.org"  
 disturl "https://npm.taobao.org/dist"
-phantomjs_cdnurl "http://cnpmjs.org/downloads"
-electron_mirror "https://npm.taobao.org/mirrors/electron/"
-sqlite3_binary_host_mirror "https://foxgis.oss-cn-shanghai.aliyuncs.com/"
-profiler_binary_host_mirror "https://npm.taobao.org/mirrors/node-inspector/"
-chromedriver_cdnurl "https://cdn.npm.taobao.org/dist/chromedriver"
+electron_mirror "https://npmmirror.com/mirrors/electron/"
+strict-ssl false
