--- a/.github/workflows/codeAnalysis.yml
+++ b/.github/workflows/codeAnalysis.yml
@@ -3,7 +3,9 @@ name: Code Analysis
 on:
   workflow_dispatch:
   push:
-
+    branches:
+      - main
+      - 'dev/**'
 permissions:
   contents: write
   pages: write
