--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ name: Deploy
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
+      - 'dev/**'
+
 permissions:
   contents: write
   pages: write
