--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ name: Test Coverage
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
+      - 'dev/**'
 jobs:
   build:
     runs-on: ubuntu-latest
