--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  TEST_SCRIPT: 'test'
+
 stages:
   - test
 
@@ -9,7 +12,7 @@ unit-integration-e2e-test:
   before_script:
     - yarn install # 安装依赖
   script:
-    - yarn test # 运行测试脚本
+    - yarn ${TEST_SCRIPT} # 运行测试脚本
   retry: 2 # 重试次数
   coverage: /Statements\s+:\s+([\d\.]+)%\s+\(\s*\d+\/\d+\s*\)/ # 根据你的覆盖率输出调整正则表达式
   artifacts:
