chore: update pre-commit script

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cypress:run": "concurrently  --kill-others  --success=first \" npm start \" \" wait-on http://localhost:8080 && cypress run \" ",
     "prettier": "prettier -c --write  **/* --cache",
     "prepare": "husky install",
-    "pre-commit": "lint-staged && cross-env CI=true npm test && npm run cypress:run",
+    "pre-commit": "lint-staged",
     "eslint:report": "eslint  -f html -o eslint-report/index.html || true"
   },
   "files": [
