--- a/.github/workflows/codeAnalysis.yml
+++ b/.github/workflows/codeAnalysis.yml
@@ -1,11 +1,15 @@
 name: Code Analysis
 
+env:
+  ESLINT_SCRIPT: ${{vars.ESLINT_SCRIPT ||  'eslint:report'}}
+
 on:
   workflow_dispatch:
   push:
     branches:
       - main
       - dev/**
+
 permissions:
   contents: write
   pages: write
@@ -28,7 +32,7 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Run ESLint
-        run: yarn eslint:report
+        run: yarn ${{env.ESLINT_SCRIPT}}
 
       - name: Upload ESLint report
         uses: actions/upload-pages-artifact@v3
